# FasrApi_Project

./: .env-example  .gitignore  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: app_factory.py  main.py  settings.py
backend/app/apps/auth/: password_handler.py
backend/app/apps/core/: base_models.py  schemas.py
backend/app/apps/info/: router.py
backend/app/apps/users/: models.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_12_03_1523-8c37c839f13d_add_user.py
documentation/: mkdocs.yml
documentation/docs/: examples.md  index.md
nginx/: nginx.conf
