[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Wadver",email = "wadverw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0,<0.123.0",
    "uvicorn>=0.29.0,<0.30.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



